Add JWT authentication with role-based authorization